# django-new-forms

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
django_new_forms/: exceptions.py  forms.py  settings.py  typing.py  views.py
django_new_forms/backends/: __init__.py  base.py  msgspec.py  pydantic.py
django_test_app/: manage.py
django_test_app/django_test_app/: asgi.py  settings.py  urls.py  wsgi.py
django_test_app/new_forms/: apps.py  dtos.py  forms.py  urls.py  views.py
django_test_app/new_forms/templates/new_forms/: contact_form.html
djnago_new_forms/: forms.py  views.py
djnago_new_forms/backends/: __init__.py  base.py  msgspec.py  pydantic.py
docs/: Makefile  conf.py  make.bat
docs/_templates/: badges.html  github.html  moreinfo.html
tests/: test_dummy.py
tests/test_example/: test_some_function.py
